maep (1.3.4) unstable; urgency=low

  * Track graph
  * Applied patch [#5562] Memory leak
  * Initial HXM heart rate monitor support
  * Extended altitude and heart rate/cadence support for tracks
  * Fixed [#5604] Support for loading gpx files with multiple tracks?
  * Fixed [#5515] Maep drains battery & slows down device by ...

 -- Till Harbaum <till@harbaum.org>  Thu, 25 Mar 2010 21:27:49 +0100

maep (1.3.3) unstable; urgency=low

  * Release gps auto center when api is being used to change map center

 -- Till Harbaum <till@harbaum.org>  Fri, 29 Jan 2010 20:42:48 +0100

maep (1.3.2) unstable; urgency=low

  * Fixed crash when wikipedia was disabled while balloon was visible
  * Fixed bug tracker link
  * Screensaver disabled only when map has focus
  * GPS framework simplified and reduced power consumption
  * Reduced "drag" threshold

 -- Till Harbaum <till@harbaum.org>  Wed, 27 Jan 2010 09:09:13 +0100

maep (1.3.1) unstable; urgency=low

  * Inclusion of altitude from GPS into track
  * Closed icon memory leak
  * Allow cancellation of search

 -- Till Harbaum <till@harbaum.org>  Sun, 24 Jan 2010 20:47:58 +0100

maep (1.3) unstable; urgency=low

  * Display wikipedia links
  * Major internal changes in osm-gps-map
  * Small usability updates on search

 -- Till Harbaum <till@harbaum.org>  Wed, 13 Jan 2010 18:47:21 +0100

maep (1.2) unstable; urgency=low

  * Places search

 -- Till Harbaum <till@harbaum.org>  Mon, 11 Jan 2010 21:47:30 +0100

maep (1.1.3) unstable; urgency=low

  * Fixed /opt symlink

 -- Till Harbaum <till@harbaum.org>  Sun, 10 Jan 2010 08:56:10 +0100

maep (1.1.2) unstable; urgency=low

  * Fixed /opt binary location

 -- Till Harbaum <till@harbaum.org>  Sun, 10 Jan 2010 08:07:44 +0100

maep (1.1.1) unstable; urgency=low

  * Fixed missing browser dependency
  * manually optified executable

 -- Till Harbaum <till@harbaum.org>  Sat, 09 Jan 2010 20:27:44 +0100

maep (1.1) unstable; urgency=low

  * Added application menu
  * Added about box